# OpusPocus

./: .pre-commit-config.yaml  README.md  README.txt  config_bt.yml  config_teacher.yml  debug.py  decontaminate.py  go.py  go.sh  iterative_bt_example.sh  iterbt_example.sh  opuspocus.py  pyproject.toml  requirements-all.txt  requirements-opuscleaner.txt  requirements.txt  simple_example.sh
.github/workflows/: release.yaml  release.yml  run_test.yaml  test.yaml
config/: 00-pipeline.minimal.yml  01-pipeline.bidirectional.yml  02-pipeline.bidirectional.slurm.yml  03-pipeline.bidirectional.resources.yml  04-pipeline.data_preprocess.yml  05-pipeline.with_backtranslation.yml  config_bt.yml  marian.train.teacher.12x12.yml  marian.train.teacher.12x6.yml  marian.train.teacher.base.yml  opustrainer.teacher.base.yml  pipeline.config.sh  pipeline.full.simple.yml  pipeline.functions.sh  pipeline.iterative_bt.yml  pipeline.iterbt.yml  pipeline.load_corpora.yml  pipeline.opuscleaner-step.yml  pipeline.opuscleaner_only.yml  pipeline.preprocess.simple.yml  pipeline.preprocess.yml  pipeline.simple.yaml  pipeline.simple.yml  pipeline.train.backtranslation.yml  pipeline.train.simple.yml
config/opuscleaner_filters/: HPLT_v2.0.en-eu.filters.json  tatoeba.en-eu.filters.json
examples/: full.simple.init.sh  full.simple.init_and_run.sh  full.simple.init_and_run_and_tb.sh  load_corpora.init_and_run.sh  opuscleaner-step.init.sh  opuscleaner_only.init_and_run.sh  preprocess_and_train.simple.init.sh  preprocess_only.init_and_run.sh  preprocess_only.simple.init_and_run.sh  train_only.backtranslation.init_and_run.sh  train_only.simple.init_and_run.sh
imperative/: imperative-hplt-training.py  opuspocus.py
opuspocus/: command_utils.py  config.py  options.py  runner_resources.py  utils.py
opuspocus/pipeline_steps/: __init__.py  clean.py  corpus_step.py  debug.py  decontaminate.py  evaluate.py  gather.py  gather_train.py  generate_vocab.py  merge.py  opuspocus_step.py  raw.py  train_model.py  translate.py
opuspocus/pipelines/: __init__.py  base.py  custom.py  exceptions.py  iterative_backtranslation.py  opuspocus_pipeline.py  simple.py
opuspocus/runners/: __init__.py  bash.py  debug.py  hyperqueue.py  opuspocus_runner.py  runner_resources.py  slurm.py
opuspocus/tools/: decontaminate.py  opustrainer_trainer.py
opuspocus_cli/: __init__.py  init.py  run.py  status.py  stop.py  traceback.py
scripts/: bash_runner_submit.py  bash_with_deps.sh  clean_dataset.sh  clean_para.sh  decontaminate.py  decontaminate_dataset.sh  download_mono.en.sh  fail_pipeline_steps.sh  get_data_hplt_v2.0.py  install_marian_cpu.sh  install_marian_gpu.sh  prepare_data.en-eu.sh  resubmit_step.sh  slurm_time_to_seconds.py
scripts/slurm/: clean_para.sh  gather_train.sh  generate_vocab.sh  get_data.sh  train_model.sh
steps/: step.py
tests/: conftest.py  test_decorators.py  test_opuspocus_pipeline.py  test_pipeline_examples.py  test_pipeline_steps.py  test_pipeline_tiny.py  test_runners.py  utils.py
tests/fixtures/: configs.py  data.py  directories.py  pipelines.py  runners.py  steps.py
tests/opuspocus/: test_decorators.py  test_options.py  test_utils.py
tests/opuspocus/pipeline_steps/: conftest.py  test_corpus_step.py  test_decontaminate.py  test_evaluate.py  test_merge.py  test_opuspocus_step.py  test_train_model.py  test_translate.py
tests/opuspocus/pipelines/: test_pipelines.py
tests/opuspocus/runners/: test_runners.py
tests/opuspocus_cli/: test_cli.py  test_run.py  test_status.py  test_stop.py  test_traceback.py
