
[project]
name = "opuspocus"
description = "Modular NLP pipeline manager."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["OPUS", "HPLT", "pipeline manager"]
authors = [{ name = "Dušan Variš", email = "varis@ufal.mff.cuni.cz" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
opuspocus = "go:main_cli"

[project.urls]
Documentation = "https://github.com/hplt-project/opuspocus#readme"
Issues = "https://github.com/hplt-project/opuspocus/issues"
Repository = "https://github.com/hplt-project/OpusPocus.git"

[tool.pytest.ini_options]
log_cli=true
log_level="CRITICAL"
pythonpath = ["."]
